improved responsiveness for mobile and small screens, fixed buttons overlapping each other

--- a/style/style.css
+++ b/style/style.css
@@ -51,22 +51,19 @@ body {
 }
 
 .titleDiv { /* title of element */
-    font-size: 60px;
+    font-size: min(60px, 10vw);
     line-height: 60px;
     display: inline-block;
-}
-
-.elemLinks a {
-    margin: 0 10px;
 }
 
 .linkButton {
     display: inline-block;
     text-decoration: none;
     background-color: rgb(0, 69, 115);
-    height: 60px;
+    min-height: 60px;
     line-height: 60px;
     font-size: 30px;
+    margin: 5px 10px;
     vertical-align: middle;
     padding: 0 20px;
     border: 1px solid white;
@@ -202,6 +199,10 @@ body {
 @media (pointer:none), (pointer:coarse) {
     #snakeDiv {
         display: none;
+    }
+
+    .titleDiv {
+        font-size: min(10vw, 50px);
     }
 
     #scrollToSnake {
